# Data-Distributions

./: .gitignore  __distribution.py  bernoulli.py  binomial.py  gaussian.py  setup.cfg  setup.py
distributions/: __distribution.py  __init__.py  bernoulli.py  binomial.py  gaussian.py
distributions/test/: test.py  test_binomial.py  test_gaussian.py
test/: test_binomial.py  test_gaussian.py
