[metadata]
name = distributions
version = 0.2
author = Anh Quoc
author_email = lhoanganhquoc@gmail.com
description = Data Distributions Package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AnhQuoc533/Data-Distributions
project_urls =
    Bug Tracker = https://github.com/AnhQuoc533/Data-Distributions/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 1 - Planning

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src